<resources>
    <string name="app_name">Кости</string>
    <string name="new_game">Новая игра</string>
    <string name="start_new_game">Начать игру</string>
    <string name="clear">Очистить</string>
    <string name="input_name">Введите имя</string>
    <string name="add">Добавить</string>
    <string name="ok">ОК</string>
    <string name="name_cannot_be_empty">Имя не может быть пустым</string>
    <string name="cancel">Отмена</string>
    <string name="settings">Настройки</string>

    <string name="save">Сохранить</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="game_settings">Настройки игры</string>
    <string name="count_place_every_move">Считать Место после каждого хода</string>
    <string name="count_total_every_move">Считать Итого после каждого хода</string>
    <string name="keep_screen_on">Не выключать экран во время игры</string>
    <string name="not_enough_players">Для начала игры надо миниум два игрока</string>
    <string name="clear_list">Очистить список</string>
    <string name="are_you_sure_to_clear_list">Вы уверены, что хотите очистить список игроков?</string>
    <string name="no">Нет</string>
    <string name="yes">Да</string>
    <string name="duplicate_plaers_error">Имена игроков не могут повторяться!</string>
    <string name="are_you_sure_to_delete_player">\"Вы уверены, что хотите удалить \"</string>
    <string name="delete">Удаление</string>
    <string name="break_game">Прервать игру</string>
    <string name="are_you_sure_to_break_game">Вы уверены, что хотите прервать текущую игру?</string>
    <string name="exit">Выход</string>
    <string name="are_you_sure_to_exit">Вы уверены, что хотите выйти?</string>
</resources>
